<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/main_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/main_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/main_progress_joinning"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <!-- Login form -->

    <ScrollView
        android:id="@+id/main_form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/main_equipName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/main_equipName"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/main_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/main_code"
                android:imeActionId="@+id/join"
                android:imeActionLabel="@string/main_action_join_short"
                android:imeOptions="actionUnspecified"
                android:inputType="text|number"
                android:maxLines="1"
                android:singleLine="true" />

            <Button
                android:id="@+id/main_joinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/main_action_join" />
        </LinearLayout>
    </ScrollView>

</merge>